Fix 22094:RACA - PRD : Enhancement - Tooltip in user sent items should not appear in right side if subject is too large.
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@3859 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1736,7 +1736,9 @@ tr.unread-row, tr.current-version {
 .subject {
   max-width: 200px !important;
 }
-
+.view-doc {
+  display: inline-block;
+}
 #addOrganizationsDistributionWorkflow {
   min-width: 1100px;
   width: 1100px;
